# SupportAgent

./: .env.example  .gitignore  README.md  agent.py  database.py  main.py  models.py  pyproject.toml  seed.py  test_openai.py
app/: agent.py  api.py  config.py  database.py  main.py  models.py
demo/: README.md  index.html  script.js  style.css
scripts/: seed.py
